--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["yii", "skeeks", "framework", "component", "marketplace"],
     "homepage": "http://cms.skeeks.com/",
 	"type": "yii2-extension",
-	"license": "BSD-3-Clause",
+	"license": "GPL-3.0+",
 	"support": {
         "issues": "http://skeeks.com/",
         "wiki": "http://en.cms.skeeks.com/docs/",
