--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	],
 	"require": {
 		"skeeks/cms": "*",
-		"skeeks/yii2-curl": "*",
+		"skeeks/yii2-curl": "*"
 	},
     "autoload": {
         "psr-4": {
