--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
 	"type": "yii2-extension",
 	"license": "GPL-3.0+",
 	"support": {
-        "issues": "http://skeeks.com/",
-        "wiki": "http://en.cms.skeeks.com/docs/",
+        "issues": "https://skeeks.com/",
+        "wiki": "https://cms.skeeks.com/docs/",
         "source": "https://github.com/skeeks-cms/cms-marketplace"
     },
 	"authors": [
@@ -17,7 +17,7 @@
 		}
 	],
 	"require": {
-		"skeeks/cms": "*",
+		"skeeks/cms": "~5.0.0 || dev-master",
 		"skeeks/yii2-curl": "*"
 	},
     "autoload": {
