--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
 		}
 	],
 	"require": {
-		"skeeks/cms": "~5.0.0 || dev-master",
-		"skeeks/cms-composer-update-plugin": "~1.0.0 || dev-master",
-		"symfony/process": "~3.3.6",
-		"skeeks/yii2-curl": "*"
+		"skeeks/cms": "^5.0.4 || dev-master",
+		"skeeks/cms-composer-update-plugin": "^1.0.0 || dev-master",
+        "skeeks/yii2-curl": "^1.1.0",
+		"symfony/process": "~3.3.6"
 	},
     "autoload": {
         "psr-4": {
