--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	"require": {
 		"skeeks/cms": "^5.0.4 || dev-master",
 		"skeeks/cms-composer-update-plugin": "^1.0.0 || dev-master",
-        "skeeks/yii2-curl": "^1.1.0",
+        "yiisoft/yii2-httpclient": "^2",
 		"symfony/process": "~3.3.6"
 	},
     "autoload": {
