--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "yiisoft/yii2-httpclient": "^2",
-        "symfony/process": "~3.3.6"
+        "symfony/process": "^6.3"
     },
     "autoload": {
         "psr-4": {
